# swagger-codegen

modules/swagger-codegen/src/main/java/io/swagger/codegen/languages/: CwapperCodegen.java  CwapperGenerator.java
modules/swagger-codegen/src/main/resources/cwapper/: CMakeLists.txt  Makefile  Makefile.mustache  base.cpp.mustache  base.mustache  config.js  config.js.mustache  config.js.template.mustache  cwapper-server.vcxproj  cwapper-server.vcxproj.filters  cwapper.hpp  cwapper.mustache  index.html.mustache  restful.hpp.mustache  restful.mustache  service.cpp.mustache  service.mustache
